--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,15 +1,15 @@
 .navbar {
-  background-color: #a40000;
-  padding: 18px 40px;
+  background-color: #8b0000;
+  padding: 20px 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .navbar a {
-  text-decoration: none;
   color: #ffffff;
-  margin-left: 28px;
+  text-decoration: none;
+  margin-left: 30px;
   font-size: 16px;
   font-weight: 500;
 }
@@ -22,8 +22,4 @@
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 2px;
-}
-
-.welcome {
-  margin-right: 20px;
 }
