--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body {
+body {
   margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  font-family: "Georgia", serif;
-  background-color: #7a0000;
-  color: #f5f5f5;
-}
-
-#root {
-  min-height: 100vh;
+  font-family: Inter, system-ui, sans-serif;
 }
